@@ -456,7 +456,10 @@ void NmapOps::ValidateOptions() {
 
   if(ipoptions && osscan)
     error("WARNING: Ip options are NOT used while OS scanning!");
-    
+
+  /* Make sure nmap.registry.args is available (even if it's empty) */
+  if (!scriptargs)
+    scriptargs = strdup("");
 }
 
 void NmapOps::setMaxOSTries(int mot) {
